Addressed Apoorv's review comments round 2 - part 1